Change: move ouput files to results folder

--- a/03/src/main.ipynb
+++ b/03/src/main.ipynb
@@ -275,7 +275,7 @@
    "outputs": [],
    "source": [
     "# save graph to file\n",
-    "nx.write_gexf(graph, 'graph.gexf')"
+    "nx.write_gexf(graph, '../results/graph.gexf')"
    ]
   },
   {
