Change: grammar fix

--- a/03/src/main.ipynb
+++ b/03/src/main.ipynb
@@ -311,6 +311,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Embedding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {},
