--- a/06-recommender-systems/README.adoc
+++ b/06-recommender-systems/README.adoc
@@ -1,6 +1,107 @@
-# HW 6 - Recommender systems
+= 6. Recommender systems 
 
-## Description
+
+== Task
+
+
+* Use the existing https://grouplens.org/datasets/movielens/[MovieLens dataset]
+** use the http://files.grouplens.org/datasets/movielens/ml-latest-small.zip[dataset version] recommended for education and development
+** Focus on the *ratings.csv* and *movies.csv* dataset partitions
+* Implement *content-based* recommender system (Details: <<cbrs>>)
+* Implement *hybrid recommender* system (Details: <<hrs>>)
+* Implement simple recommender using existing framework (e.g https://github.com/tensorflow/recommenders[TFRS])
+* *Evaluate* your implementations
+** split your dataset in two parts
+*** example: `awk ‚NR % 2 != 0‘ ratings.csv > new-ratings.csv` (!= for training part, == for testing part)
+*** training: one part to compute similarities and generate recommendations
+*** testing: other part to evaluate the recommendations
+** Evaluation metrics
+**** compute *Precision, Recall, F-measure*
+**** you can re-use code from xref:../05/index#[homework 5]
+** Evaluate the:
+*** content based implementation
+*** collaborative filtering implementation (from the tutorial)
+*** hybrid approach
+**** try out at least three different weghting scheme
+**** e.g. 0.3+0.7, 0.5+0.5, 0.7+0.3
+*** model using framework
+
+
+== Instructions for submitting
+
+
+In your repository provide the following information:
+
+* Provide your implementation
+** content-based, collaborative filtering, hybrid implementation and using framework
+* Document and describe each implemented recsys approach
+** for the content based, collaborative, hybrid and model using framework
+* Summarize the results from the evaluation
+** which approach provides best results?
+** provide link to the complete results
+* Comment on
+** issues during the design/implementation
+** ideas for extensions/improvements/future work
+
+
+
+== Details
+
+=== Content-based recommender system [[cbrs]]
+* Content-based recommender system
+** Represent each movie (item) as a set of genres
+*** use movies.csv
+*** Toy Story (1995), genres: Adventure, Animation, Children, Comedy, Fantasy
+*** represent this info as vector
+
+[options="autowidth"]
+|====
+<h| Movie  <h| Action  >h|  Adventure  <h| Animation  >h|  Children  >h|  Comedy  >h|  Crime  <h| Documentary  <h| Drama  <h| Fantasy  <h| Film-Noir  <h| Horror  <h| Musical  <h| Mystery  <h| Romance  <h| Sci-Fi  <h| Thriller  <h| War  <h| Western
+| Toy Story (1995)  | 0  | 1  | 1  | 1  | 1  | 0  | 0  | 0  | 1  | 0  | 0  | 0  | 0  | 0  | 0  | 0  | 0  | 0
+|====
+
+** Build user profiles consisting of genres instead of movies, example:
+*** use ratings.csv and movies.csv
+*** user-id: Action, Adventure, Animation, Comedy, Fantasy, Film-Noir, Horror
+
+[options="autowidth"]
+|====
+<h| UserId  <h| Action  >h|  Adventure  <h| Animation  >h|  Children  >h|  Comedy  >h|  Crime  <h| Documentary  <h| Drama  <h| Fantasy  <h| Film-Noir  <h| Horror  <h| Musical  <h| Mystery  <h| Romance  <h| Sci-Fi  <h| Thriller  <h| War  <h| Western
+| 123  | 1  | 2  | 3  | 0  | 2  | 0  | 0  | 0  | 2  | 3  | 1  | 0  | 0  | 0  | 0  | 0  | 0  | 0
+|====
+
+*** 0 if rating is <2.5, 1 if rating is >=2.5
+*** for users which rated movies with same genre, add +1 to the genre field (if rating >= 2.5)
+** *Compute similarity between the user profile vector and each item vector*
+** Recommend top-N most similar items
+*** previously not rated by the user
+
+=== Hybrid recommender system [[hrs]]
+* Hybrid recommender system
+** combine the results from the CF implementation from the tutorial and the content based recsys from this task
+** *normalize the results* from the CF and content based so that they are in the interval ++[++0, 1++]++
+** aggregate the results using weighting scheme
+** e.g. 0.3 for the content based, 0.7 for the collaborative filtering
+
+Weighting example (with 3 items) for a user with 0.3 for content based and 0.7 for collaborative filtering:
+
+* results from content based
+** item-1: 0.8 (rank 1)
+** item-2: 0.7 (rank 2)
+** item-3: 0.5 (rank 3)
+* results from collaborative filtering
+** item-1: 0.4 (rank 3)
+** item-2: 0.5 (rank 2)
+** item-3: 0.7 (rank 1)
+* results from hybrid
+** item-1: 0.8 x 0.3 + 0.4 x 0.7 = 0.52 (rank 3)
+** item-2: 0.7 x 0.3 + 0.5 x 0.7 = 0.56 (rank 2)
+** item-3: 0.5 x 0.3 + 0.7 x 0.7 = 0.64 (rank 1)
+
+
+== Solution
+
+=== Description
 
 I've implemented 4 movie recommender systems, which takes movies and ratings dataset as an input. I've created the following implementations:
 
@@ -22,9 +123,9 @@ The dataset for ratings has four columns:
 -   **rating**: score given on a 5-star scale with half-star increments from 0.5 to 5.0 stars.
 -   **timestamp**: the number of seconds since January 1, 1970, at midnight Coordinated Universal Time (UTC).
 
-## Implementation
+=== Implementation
 
-### Content based recommendation
+==== Content based recommendation
 
 Content-based recommendation suggests movies to users based on the content or features of the movie, such as genres in this implementation.
 
@@ -34,7 +135,7 @@ Next, I created a dataframe/matrix for each user. The first column of this matri
 
 I then computed the cosine similarity, set seen movies to 0, normalized the data, and created the recommendation function.
 
-### Collaborative Filtering recommendation
+==== Collaborative Filtering recommendation
 
 Collaborative filtering recommendation suggests movies to users based on the similarity between their preferences.
 
@@ -44,15 +145,15 @@ Next, I created a watch matrix with rows for users and columns for movies. This 
 
 To obtain recommended movies, I multiplied the watch matrix by user similarities and normalized it.
 
-### Hybrid recommendation
+==== Hybrid recommendation
 
 This is basically just a combination of previous two methods weighted by some coefficients. These coefficients can be set as parameters, allowing you to choose which method should have a higher weight in the final recommendation.
 
-### Tensorflow recommenders
+==== Tensorflow recommenders
 
 I attempted to utilize the TensorFlow recommenders mentioned in the task, but encountered difficulties due to incompatibility with my M1 CPU. Despite being able to eventually run TensorFlow on my hardware, the example code for TensorFlow recommenders continued to throw errors. As a result, I switched to using Google Colab, but the free version did not provide sufficient RAM for my Jupyter notebook. Therefore, I only ran the last task on Colab and split the first task into two separate notebooks: [main.ipynb](/src/main.ipynb) and [tensorflow-recommenders.ipynb](/src/tensorflow-recommenders.ipynb). Additionally, I have no prior experience with machine learning and am unfamiliar with how this code operates. I solely used the code provided by the tutorial, modifying only the input dataset and output.
 
-## Results
+=== Results
 
 I split the ratings.csv file into two files, one containing odd lines and the other containing even lines. I randomly selected one of the files for training and the other for testing. I then compared the results from both inputs and attempted to recommend the top 10 movies to user 2.
 
